# areas

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  install.sh  pyproject.toml  scripts.py  setup.py
.github/disabled/: docker.yml
.github/workflows/: docker.yml
areas/: __init__.py  main.py  test.py  tester.py
areas/config/: architectures.py
areas/exception/: __init__.py
areas/parameters/: __init__.py  array_parameter.py  numeric_parameter.py  parameter.py  string_parameter.py
areas/subroutines/: __init__.py  array_subroutine.py  mixed_subroutine.py  numeric_subroutine.py  subroutine.py  void_subroutine.py
areas/util/: parse_errors.py  subroutine_integrity.py
arm64_tester/: __init__.py  main.py  test.py  tester.py
arm64_tester/exception/: __init__.py  tool_file_error.py
arm64_tester/parameters/: __init__.py  array_parameter.py  numeric_parameter.py  parameter.py  string_parameter.py
arm64_tester/subroutines/: __init__.py  array_subroutine.py  mixed_subroutine.py  numeric_subroutine.py  subroutine.py  void_subroutine.py
arm64_tester/util/: type_casting.py
requirements/: requirements.txt  riscv32-prebuilt.sh  riscv32.sh  system_requirements.sh
src/: main.py  tester.py
src/exception/: __init__.py  compile_error.py  runtime_error.py
src/feedback/: loles.json
src/subroutines/: mixed_subroutine.py  numeric_subroutine.py
tests/: chari.py  count_range_test.py  errors_test.py  riscv_extern_test.py  run_test.py  t1e2_test.py  test_run.py  trans_test.py  warning_error_test.py
tests/resources/: calc.s  power.s  subroutines.yaml  (+1 more)
(+25 files in other folders)
