[tool.poetry]
name = "areas"
version = "0.1.9.2"
description = "ARM64 and RISC-V (extensible) assessment system"
authors = ["Luis Tavares <luistavares10@outlook.pt>"]
repository = "https://github.com/luist18/areasear"
license = "MIT"
readme = "README.md"
packages = [{include = "areas"}]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
Unidecode = "^1.3.4"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "scripts:test"
